--- a/index.html
+++ b/index.html
@@ -362,6 +362,14 @@
 
         </div>
 
+        <div class="mobile-bottom">
+            <ion-icon name="home"></ion-icon>
+            <ion-icon name="search-outline"></ion-icon>
+            <ion-icon name="add-circle-outline">
+            </ion-icon><ion-icon name="heart-outline"></ion-icon>
+            <ion-icon name="person-outline"></ion-icon>
+        </div>
+
     </div>
     
 
