--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                             </div>
 
                             <div class="comment">
-                                <p><a href="https://www.instagram.com/nenetas/">nenetas</a> <span>eu procurando <a href="#">@felipeonl</a> no jogo do ovo</span></p>
+                                <p><a href="https://www.instagram.com/nenetas/">nenetas</a> <span>eu procurando <a href="https://www.instagram.com/felipeonl">@felipeonl</a> no jogo do ovo</span></p>
                                 <ion-icon name="heart-outline"></ion-icon>
                             </div>
 
