Comments general fix

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <div class="input">
                                 <ion-icon name="happy-outline"></ion-icon>
                                 <input type="text" placeholder="Adicione um comentário...">
-                                <a href="#">Enviar</a>
+                                <a href="#" class="publicar">Publicar</a>
                             </div>
                         </div>
 
@@ -228,7 +228,7 @@
                             <div class="input">
                                 <ion-icon name="happy-outline"></ion-icon>
                                 <input type="text" placeholder="Adicione um comentário...">
-                                <a href="#">Enviar</a>
+                                <a href="#" class="publicar">Publicar</a>
                             </div>
                         </div>
 
@@ -288,7 +288,7 @@
                             <div class="input">
                                 <ion-icon name="happy-outline"></ion-icon>
                                 <input type="text" placeholder="Adicione um comentário...">
-                                <a href="#">Enviar</a>
+                                <a href="#" class="publicar">Publicar</a>
                             </div>
                         </div>
 
@@ -343,7 +343,7 @@
                             <div class="input">
                                 <ion-icon name="happy-outline"></ion-icon>
                                 <input type="text" placeholder="Adicione um comentário...">
-                                <a href="#">Enviar</a>
+                                <a href="#" class="publicar">Publicar</a>
                             </div>
                         </div>
 
